k8s-manifiestos/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sitio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: sitio.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sitio-service
                port:
                  number: 80
